# geoapi

./: .flake8  .gitignore  Procfile  README.md  heroku.yml  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: build.yml  codeql-analysis.yml  lint.yml  test.yml
docker/: Dockerfile  docker-compose.yaml  docker-entrypoint.sh
docs/diagrams/: UserAddressLookup.drawio
geoapi/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
geodata/: admin.py  apps.py  consumers.py  models.py  serializers.py  tasks.py  utils.py  views.py
geodata/tests/: conftest.py  test_models.py
src/: Procfile  manage.py  requirements.txt
src/authentication/: admin.py  middleware.py  models.py  serializers.py  views.py
src/authentication/migrations/: 0001_initial.py
src/data/: admin.py  apps.py  models.py  serializers.py  tasks.py  views.py
src/data/management/commands/: healthcheck.py  user_exists.py
src/data/migrations/: 0001_initial.py  0002_alter_geodata_address.py  0002_delete_failedworkerresult.py
src/data/websocket/: consumers.py  serializers.py  utils.py
src/fixtures/: seed.json
src/geoapi/: __init__.py  asgi.py  celery.py  settings.py  urls.py  utils.py  wsgi.py
tests/: conftest.py  settings.py  test_api.py  test_auth_middleware.py  test_consumer.py  test_models.py  test_tasks.py
tests/test_models/: conftest.py  test_models.py
